<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/lockedIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_lock"
        android:contentDescription="@string/locked_icon_desc"/>

    <Button
        android:id="@+id/btnTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_tasks"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_settings_parent"
        android:layout_marginTop="12dp"/>
</LinearLayout>
